--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ ul {
 	color: white;
 	text-decoration: none;
 	font-size: 60px;
-	transition: all ease-in-out 500ms;
+	transition: all ease-in-out 300ms;
+	padding-right: 16px;
 }
 
 .box li a:hover {
