--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
 	margin: 0;
 	padding: 0;
-	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 29%, rgba(0,212,255,1) 77%);
+  	background-color: blue;
+  	background-image: linear-gradient(to bottom right, blue, rgba(0,212,255,1));
 	background-size: cover;
 }
 
