--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+html {
+    height: 100%;
+}
+
 body {
+	height: 100%;
 	margin: 0;
 	padding: 0;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
   	background-image: linear-gradient(to bottom right, blue, rgba(0,212,255,1));
 	background-size: cover;
 }
